<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical"
    tools:context=".Activities.LoginAct">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:alpha="1"
        android:contentDescription="@string/description"
        android:scaleType="centerInside"
        android:src="@drawable/download" />

    <TextView
        android:id="@+id/ttv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-60dp"
        android:elevation="2dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="Your Ride, Our Pride."
        android:textColor="?attr/backgroundColorDark"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="50dp">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/description"
                android:src="@drawable/call" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:importantForAutofill="no"
                android:textColorHint="?attr/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hapticFeedbackEnabled="true"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="10dp"
                    android:textColor="?attr/backgroundColorDark"
                    android:textSize="20dp"
                    tools:ignore="RtlSymmetry,SpUsage" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="NotSibling">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/description"
                android:src="@drawable/otp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/enter_otp"
                android:inputType="number"
                android:textColorHint="?attr/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hapticFeedbackEnabled="true"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="10dp"
                    android:textColor="?attr/backgroundColorDark"
                    android:textSize="20dp"
                    tools:ignore="RtlSymmetry,SpUsage" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-70dp"
        android:layout_marginBottom="-30dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/otp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@+id/progressBar3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/save_now_bg"
        android:elevation="0dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/getCode"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@+id/progressBar3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/save_now_bg"
        android:elevation="0dp"
        android:text="@string/get_code"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>